# containing

./: .gitignore  LICENSE.rst  README.md  setup.cfg
.github/workflows/: lint-and-test.yml
src/: containing.py  pytest_containing.py
tests/: test_containing.py
