[metadata]
name = containing
version = 0.0.1
author = Stefaan Lippens
author_email = soxofaan@gmail.com
description = pytest helper for asserting that a container contains expected items
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soxofaan/containing
project_urls =
    Bug Tracker = https://github.com/soxofaan/containing/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
py_modules = containing
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
